// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`archive-with-advertisement 1`] = `
<div
  class="small-header with-content-direct with-native-direct with-native-direct-after-title with-bottom-native-direct"
>
  <header
    class="head"
  >
    <div
      class="header header_has-center header"
    >
      <div
        class="header__side-left"
      >
        <span
          class="logo"
        >
          <a
            class="logo__link logo__link_yandex"
            href="//yandex.ru"
            rel="noopener noreferrer"
          />
          <svg
            class="logo__svg"
            height="30"
            width="69"
          >
            <g>
              <path
                d="M34.997 22.97V9.024l-7.26-.026v1.363c0 4.248-.316 9.22-1.775 12.61h-1.045v5.036H27.2V25h6.846v3.006h2.22V22.97h-1.27.001zm11.444-.95c-.633.444-1.743 1.078-3.138 1.078-1.965 0-2.948-1.57-2.948-5.184h6.657V16.55c0-5.42-1.774-7.75-4.437-7.75-3.392 0-4.818 3.742-4.818 8.877 0 4.914 2.03 7.545 5.325 7.545 1.585 0 2.917-.507 3.93-1.3l-.57-1.902h-.001zm-25.415-6h-3.523V9.034H15.03V25.01h2.472v-6.96h3.523v6.96h2.44V9.034h-2.44v6.987l.001-.001zM58.9 25l-4.534-8.464 3.962-7.513h-2.504l-3.836 7.386V9.022h-2.473V25h2.473v-7.957L56.204 25H58.9zm5.8.222c1.458 0 2.472-.476 3.328-1.205l-.57-1.838c-.57.506-1.49.98-2.695.98-1.997 0-2.948-2.28-2.948-6.275 0-4.026 1.268-6.023 3.043-6.023 1.015 0 1.966.54 2.63 1.11l.35-2.347c-.697-.443-1.522-.824-2.948-.824-3.74 0-5.674 3.203-5.674 8.212 0 5.452 2.06 8.21 5.484 8.21zm-32.144-2.25h-4.248c1.332-3.393 1.49-8.306 1.49-11.666v-.286h2.758v11.952zm11.834-8.886c.062.567.09 1.198.09 1.874h-4.09c.16-2.853.662-5.13 2.183-5.13 1.073 0 1.626 1.536 1.817 3.256z"
                fill="#000"
              />
              <path
                d="M9.547 25.006h2.44V2H8.343C4.761 2 1.728 4.377 1.728 9.132c0 3.39 1.352 5.572 3.35 6.586L.83 25.006h2.82l3.868-8.685h2.03v8.686l-.001-.001zM8.27 14.303c-2.125 0-3.864-1.357-3.864-5.003 0-.214.006-.422.018-.623.198-3.34 1.99-4.704 3.845-4.704h1.3v10.33h-1.3.001z"
                fill="#F00"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="header__side-center"
      />
      <div
        class="header__side-right"
      >
        <lego-components_button
          size="m"
          type="link"
          url="passport.ya.ru/auth?retpath=https%3A%2F%2Fdv.ya.ru%2F%3FforceDefaultAccount%3D1&origin=disk_dv_web_signin_ru"
          view="raised"
        >
          <span>
            Войти
          </span>
        </lego-components_button>
      </div>
    </div>
  </header>
  <div
    class="main"
  >
    <span
      class="top-0"
    />
    <div
      class="direct top-direct placeholder"
    />
    <div
      class="bottom-0"
    />
    <div>
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        />
      </div>
      <div
        class="godot"
      >
        <lego-components_spin
          progress="true"
          size="l"
          view="default"
        />
      </div>
    </div>
    <lego-components_modal
      autoclosable="false"
      theme="normal"
      trapfocus="false"
      visible="false"
    >
      <div
        class="wrapper"
      >
        <span
          class="close"
        >
          <ufo-rocks_icon />
        </span>
        <div
          class="content"
        />
      </div>
    </lego-components_modal>
  </div>
</div>
`;

exports[`dv 1`] = `
<div
  class="small-header with-content-direct with-native-direct with-native-direct-after-title with-bottom-native-direct"
>
  <header
    class="head"
  >
    <div
      class="header header_has-center header"
    >
      <div
        class="header__side-left"
      >
        <span
          class="logo"
        >
          <a
            class="logo__link logo__link_yandex"
            href="//yandex.ru"
            rel="noopener noreferrer"
          />
          <svg
            class="logo__svg"
            height="30"
            width="69"
          >
            <g>
              <path
                d="M34.997 22.97V9.024l-7.26-.026v1.363c0 4.248-.316 9.22-1.775 12.61h-1.045v5.036H27.2V25h6.846v3.006h2.22V22.97h-1.27.001zm11.444-.95c-.633.444-1.743 1.078-3.138 1.078-1.965 0-2.948-1.57-2.948-5.184h6.657V16.55c0-5.42-1.774-7.75-4.437-7.75-3.392 0-4.818 3.742-4.818 8.877 0 4.914 2.03 7.545 5.325 7.545 1.585 0 2.917-.507 3.93-1.3l-.57-1.902h-.001zm-25.415-6h-3.523V9.034H15.03V25.01h2.472v-6.96h3.523v6.96h2.44V9.034h-2.44v6.987l.001-.001zM58.9 25l-4.534-8.464 3.962-7.513h-2.504l-3.836 7.386V9.022h-2.473V25h2.473v-7.957L56.204 25H58.9zm5.8.222c1.458 0 2.472-.476 3.328-1.205l-.57-1.838c-.57.506-1.49.98-2.695.98-1.997 0-2.948-2.28-2.948-6.275 0-4.026 1.268-6.023 3.043-6.023 1.015 0 1.966.54 2.63 1.11l.35-2.347c-.697-.443-1.522-.824-2.948-.824-3.74 0-5.674 3.203-5.674 8.212 0 5.452 2.06 8.21 5.484 8.21zm-32.144-2.25h-4.248c1.332-3.393 1.49-8.306 1.49-11.666v-.286h2.758v11.952zm11.834-8.886c.062.567.09 1.198.09 1.874h-4.09c.16-2.853.662-5.13 2.183-5.13 1.073 0 1.626 1.536 1.817 3.256z"
                fill="#000"
              />
              <path
                d="M9.547 25.006h2.44V2H8.343C4.761 2 1.728 4.377 1.728 9.132c0 3.39 1.352 5.572 3.35 6.586L.83 25.006h2.82l3.868-8.685h2.03v8.686l-.001-.001zM8.27 14.303c-2.125 0-3.864-1.357-3.864-5.003 0-.214.006-.422.018-.623.198-3.34 1.99-4.704 3.845-4.704h1.3v10.33h-1.3.001z"
                fill="#F00"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="header__side-center"
      />
      <div
        class="header__side-right"
      >
        <lego-components_button
          size="m"
          type="link"
          url="passport.ya.ru/auth?retpath=https%3A%2F%2Fdv.ya.ru%2F%3FforceDefaultAccount%3D1&origin=disk_dv_web_signin_ru"
          view="raised"
        >
          <span>
            Войти
          </span>
        </lego-components_button>
      </div>
    </div>
  </header>
  <div
    class="main"
  >
    <div
      class="no-url"
    >
      <h2>
        <span>
          Добро пожаловать!
        </span>
      </h2>
    </div>
    <lego-components_modal
      autoclosable="false"
      theme="normal"
      trapfocus="false"
      visible="false"
    >
      <div
        class="wrapper"
      >
        <span
          class="close"
        >
          <ufo-rocks_icon />
        </span>
        <div
          class="content"
        />
      </div>
    </lego-components_modal>
  </div>
</div>
`;

exports[`dv with fullscreen-slider 1`] = `
<div
  class="small-header with-content-direct with-native-direct with-native-direct-after-title with-bottom-native-direct"
>
  <header
    class="head"
  >
    <div
      class="header header_has-center header"
    >
      <div
        class="header__side-left"
      >
        <span
          class="logo"
        >
          <a
            class="logo__link logo__link_yandex"
            href="//yandex.ru"
            rel="noopener noreferrer"
          />
          <svg
            class="logo__svg"
            height="30"
            width="69"
          >
            <g>
              <path
                d="M34.997 22.97V9.024l-7.26-.026v1.363c0 4.248-.316 9.22-1.775 12.61h-1.045v5.036H27.2V25h6.846v3.006h2.22V22.97h-1.27.001zm11.444-.95c-.633.444-1.743 1.078-3.138 1.078-1.965 0-2.948-1.57-2.948-5.184h6.657V16.55c0-5.42-1.774-7.75-4.437-7.75-3.392 0-4.818 3.742-4.818 8.877 0 4.914 2.03 7.545 5.325 7.545 1.585 0 2.917-.507 3.93-1.3l-.57-1.902h-.001zm-25.415-6h-3.523V9.034H15.03V25.01h2.472v-6.96h3.523v6.96h2.44V9.034h-2.44v6.987l.001-.001zM58.9 25l-4.534-8.464 3.962-7.513h-2.504l-3.836 7.386V9.022h-2.473V25h2.473v-7.957L56.204 25H58.9zm5.8.222c1.458 0 2.472-.476 3.328-1.205l-.57-1.838c-.57.506-1.49.98-2.695.98-1.997 0-2.948-2.28-2.948-6.275 0-4.026 1.268-6.023 3.043-6.023 1.015 0 1.966.54 2.63 1.11l.35-2.347c-.697-.443-1.522-.824-2.948-.824-3.74 0-5.674 3.203-5.674 8.212 0 5.452 2.06 8.21 5.484 8.21zm-32.144-2.25h-4.248c1.332-3.393 1.49-8.306 1.49-11.666v-.286h2.758v11.952zm11.834-8.886c.062.567.09 1.198.09 1.874h-4.09c.16-2.853.662-5.13 2.183-5.13 1.073 0 1.626 1.536 1.817 3.256z"
                fill="#000"
              />
              <path
                d="M9.547 25.006h2.44V2H8.343C4.761 2 1.728 4.377 1.728 9.132c0 3.39 1.352 5.572 3.35 6.586L.83 25.006h2.82l3.868-8.685h2.03v8.686l-.001-.001zM8.27 14.303c-2.125 0-3.864-1.357-3.864-5.003 0-.214.006-.422.018-.623.198-3.34 1.99-4.704 3.845-4.704h1.3v10.33h-1.3.001z"
                fill="#F00"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="header__side-center"
      />
      <div
        class="header__side-right"
      >
        <lego-components_button
          size="m"
          type="link"
          url="passport.ya.ru/auth?retpath=https%3A%2F%2Fdv.ya.ru%2F%3FforceDefaultAccount%3D1&origin=disk_dv_web_signin_ru"
          view="raised"
        >
          <span>
            Войти
          </span>
        </lego-components_button>
      </div>
    </div>
  </header>
  <div
    class="main mainOnePage"
  >
    <div
      class=""
    >
      <div
        class="html js-doc-html html_onePage"
      >
        <div
          class="pages"
        >
          <div
            class="titleWrapper"
          >
            <h2
              class="title"
            >
              вжух-вжух.pdf
            </h2>
          </div>
          <span
            class="top-0"
          />
          <div
            class="direct top-direct placeholder"
          />
          <div
            class="bottom-0"
          />
          <div
            class="js-doc-page page onlyOnePageMode page_presentation page_hidden waitingImageStub_blinking"
            data-index="1"
          >
            <div
              class="__page-1 wait"
            />
          </div>
          <div
            class="js-doc-page page onlyOnePageMode page_presentation page_hidden waitingImageStub"
            data-index="2"
          >
            <div
              class="__page-2 wait"
            />
          </div>
          <div
            class="js-doc-page page onlyOnePageMode page_presentation page_hidden waitingImageStub"
            data-index="3"
          >
            <div
              class="__page-3 wait"
            />
          </div>
          <div
            class="sliderButtonsWrapper onePage"
          >
            <div
              class="sliderButtons"
              style="max-width:unset;width:100%"
            />
            <div
              class="sliderButtonsDocsRightMargin"
            />
          </div>
        </div>
      </div>
      <div
        class="pagerWrapper"
      >
        <div
          class="pagerLayout onePage"
        >
          <div
            class="pager pager_withFullscreen"
          >
            <div
              class="pageCounterWrapper"
            >
              <input
                class="input"
                min="1"
                type="number"
                value="1"
              />
              <span
                class="pageCounter"
              >
                1 из 3
              </span>
            </div>
            <div
              class="fullscreen"
            >
              <lego-components_button
                classname="fullscreen__button"
                controlref="[object Object]"
                icon="className => /*#__PURE__*/_react.default.createElement(_fullscreen.default, {
        type: isInFullscreen ? 'exit' : '',
        cls: className
      })"
                onclick="function () { [native code] }"
                size="s"
                view="clear-inverse"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <lego-components_modal
      autoclosable="false"
      theme="normal"
      trapfocus="false"
      visible="false"
    >
      <div
        class="wrapper"
      >
        <span
          class="close"
        >
          <ufo-rocks_icon />
        </span>
        <div
          class="content"
        />
      </div>
    </lego-components_modal>
    <div
      class="slider fullscreenSlider fullscreen-slider"
    >
      <div
        aria-live="assertive"
        class="slider__a11y"
        role="alert"
      />
      <div
        class="slider__items"
      >
        <div
          aria-hidden="false"
          class="slider__item slider__item_active"
        >
          <div
            class="slider__content"
          >
            <lego-components_spin
              progress="true"
              size="l"
              view="default"
            />
          </div>
        </div>
        <div
          aria-hidden="true"
          class="slider__item"
        />
        <div
          aria-hidden="true"
          class="slider__item"
        />
      </div>
      <div
        class="slider__toolbar slider__toolbar_visible"
      >
        <div
          class="pagerWrapper"
        >
          <div
            class="pagerLayout onePage"
          >
            <div
              class="pager_visible pager_withFullscreen"
            >
              <div
                class="pageCounterWrapper"
              >
                <input
                  class="input"
                  min="1"
                  type="number"
                  value="1"
                />
                <span
                  class="pageCounter"
                >
                  1 из 3
                </span>
              </div>
              <div
                class="fullscreen"
              >
                <lego-components_button
                  classname="fullscreen__button"
                  controlref="[object Object]"
                  icon="className => /*#__PURE__*/_react.default.createElement(_fullscreen.default, {
        type: isInFullscreen ? 'exit' : '',
        cls: className
      })"
                  onclick="function () { [native code] }"
                  size="s"
                  view="clear-inverse"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        autocomplete="off"
        class="Button2 Button2_view_clear Button2_size_xxxl switch-arrow-button switch-arrow-button_right switch-arrow-button_theme_dark"
        type="button"
      >
        <span
          class="ufo-icon icon Button2-Icon"
        >
          <svg
            class="ufo-icon__icon"
            height="48"
            role="none"
            viewBox="0 0 16 16"
            width="48"
          >
            <path
              d="M6.4 12l4-4-4-4-.8.8L8.8 8l-3.2 3.2z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`dv-corp 1`] = `
<div
  class="is-corp small-header"
>
  <header
    class="head"
  >
    <div
      class="header header_has-center header"
    >
      <div
        class="header__side-left"
      >
        <span
          class="logo"
        >
          <a
            class="logo__link logo__link_yandex"
            href="//yandex.ru"
            rel="noopener noreferrer"
          />
          <svg
            class="logo__svg"
            height="30"
            width="69"
          >
            <g>
              <path
                d="M34.997 22.97V9.024l-7.26-.026v1.363c0 4.248-.316 9.22-1.775 12.61h-1.045v5.036H27.2V25h6.846v3.006h2.22V22.97h-1.27.001zm11.444-.95c-.633.444-1.743 1.078-3.138 1.078-1.965 0-2.948-1.57-2.948-5.184h6.657V16.55c0-5.42-1.774-7.75-4.437-7.75-3.392 0-4.818 3.742-4.818 8.877 0 4.914 2.03 7.545 5.325 7.545 1.585 0 2.917-.507 3.93-1.3l-.57-1.902h-.001zm-25.415-6h-3.523V9.034H15.03V25.01h2.472v-6.96h3.523v6.96h2.44V9.034h-2.44v6.987l.001-.001zM58.9 25l-4.534-8.464 3.962-7.513h-2.504l-3.836 7.386V9.022h-2.473V25h2.473v-7.957L56.204 25H58.9zm5.8.222c1.458 0 2.472-.476 3.328-1.205l-.57-1.838c-.57.506-1.49.98-2.695.98-1.997 0-2.948-2.28-2.948-6.275 0-4.026 1.268-6.023 3.043-6.023 1.015 0 1.966.54 2.63 1.11l.35-2.347c-.697-.443-1.522-.824-2.948-.824-3.74 0-5.674 3.203-5.674 8.212 0 5.452 2.06 8.21 5.484 8.21zm-32.144-2.25h-4.248c1.332-3.393 1.49-8.306 1.49-11.666v-.286h2.758v11.952zm11.834-8.886c.062.567.09 1.198.09 1.874h-4.09c.16-2.853.662-5.13 2.183-5.13 1.073 0 1.626 1.536 1.817 3.256z"
                fill="#000"
              />
              <path
                d="M9.547 25.006h2.44V2H8.343C4.761 2 1.728 4.377 1.728 9.132c0 3.39 1.352 5.572 3.35 6.586L.83 25.006h2.82l3.868-8.685h2.03v8.686l-.001-.001zM8.27 14.303c-2.125 0-3.864-1.357-3.864-5.003 0-.214.006-.422.018-.623.198-3.34 1.99-4.704 3.845-4.704h1.3v10.33h-1.3.001z"
                fill="#F00"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="header__side-center"
      />
      <div
        class="header__side-right"
      >
        <lego-components_button
          size="m"
          type="link"
          url="passport.ya.ru/auth?retpath=https%3A%2F%2Fdv.ya.ru%2F%3FforceDefaultAccount%3D1&origin=disk_dv_web_signin_ru"
          view="raised"
        >
          <span>
            Войти
          </span>
        </lego-components_button>
      </div>
    </div>
  </header>
  <div
    class="main"
  >
    <div
      class="no-url"
    >
      <h2>
        <span>
          Добро пожаловать!
        </span>
      </h2>
    </div>
    <lego-components_modal
      autoclosable="false"
      theme="normal"
      trapfocus="false"
      visible="false"
    >
      <div
        class="wrapper"
      >
        <span
          class="close"
        >
          <ufo-rocks_icon />
        </span>
        <div
          class="content"
        />
      </div>
    </lego-components_modal>
  </div>
</div>
`;

exports[`dv-embed 1`] = `
<div
  class="embed-dv small-header"
>
  <header
    class="head"
  >
    <div
      class="embedActions"
    >
      <lego-components_button
        classname="backButton"
        iconleft="className => /*#__PURE__*/_react.default.createElement(_resourceIcon.default, {
  type: \\"dir_back\\",
  cls: className
})"
        onclick="function () { [native code] }"
        size="m"
        view="clear"
      >
        <span>
          Назад
        </span>
      </lego-components_button>
    </div>
  </header>
  <div
    class="main"
  >
    <div
      class="no-url"
    >
      <h2>
        <span>
          Добро пожаловать!
        </span>
      </h2>
    </div>
    <lego-components_modal
      autoclosable="false"
      theme="normal"
      trapfocus="false"
      visible="false"
    >
      <div
        class="wrapper"
      >
        <span
          class="close"
        >
          <ufo-rocks_icon />
        </span>
        <div
          class="content"
        />
      </div>
    </lego-components_modal>
  </div>
</div>
`;

exports[`dv-with-advertisement (default) 1`] = `
<div
  class="small-header with-content-direct with-native-direct with-native-direct-after-title with-bottom-native-direct"
>
  <header
    class="head"
  >
    <div
      class="header header_has-center header"
    >
      <div
        class="header__side-left"
      >
        <span
          class="logo"
        >
          <a
            class="logo__link logo__link_yandex"
            href="//yandex.ru"
            rel="noopener noreferrer"
          />
          <svg
            class="logo__svg"
            height="30"
            width="69"
          >
            <g>
              <path
                d="M34.997 22.97V9.024l-7.26-.026v1.363c0 4.248-.316 9.22-1.775 12.61h-1.045v5.036H27.2V25h6.846v3.006h2.22V22.97h-1.27.001zm11.444-.95c-.633.444-1.743 1.078-3.138 1.078-1.965 0-2.948-1.57-2.948-5.184h6.657V16.55c0-5.42-1.774-7.75-4.437-7.75-3.392 0-4.818 3.742-4.818 8.877 0 4.914 2.03 7.545 5.325 7.545 1.585 0 2.917-.507 3.93-1.3l-.57-1.902h-.001zm-25.415-6h-3.523V9.034H15.03V25.01h2.472v-6.96h3.523v6.96h2.44V9.034h-2.44v6.987l.001-.001zM58.9 25l-4.534-8.464 3.962-7.513h-2.504l-3.836 7.386V9.022h-2.473V25h2.473v-7.957L56.204 25H58.9zm5.8.222c1.458 0 2.472-.476 3.328-1.205l-.57-1.838c-.57.506-1.49.98-2.695.98-1.997 0-2.948-2.28-2.948-6.275 0-4.026 1.268-6.023 3.043-6.023 1.015 0 1.966.54 2.63 1.11l.35-2.347c-.697-.443-1.522-.824-2.948-.824-3.74 0-5.674 3.203-5.674 8.212 0 5.452 2.06 8.21 5.484 8.21zm-32.144-2.25h-4.248c1.332-3.393 1.49-8.306 1.49-11.666v-.286h2.758v11.952zm11.834-8.886c.062.567.09 1.198.09 1.874h-4.09c.16-2.853.662-5.13 2.183-5.13 1.073 0 1.626 1.536 1.817 3.256z"
                fill="#000"
              />
              <path
                d="M9.547 25.006h2.44V2H8.343C4.761 2 1.728 4.377 1.728 9.132c0 3.39 1.352 5.572 3.35 6.586L.83 25.006h2.82l3.868-8.685h2.03v8.686l-.001-.001zM8.27 14.303c-2.125 0-3.864-1.357-3.864-5.003 0-.214.006-.422.018-.623.198-3.34 1.99-4.704 3.845-4.704h1.3v10.33h-1.3.001z"
                fill="#F00"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="header__side-center"
      />
      <div
        class="header__side-right"
      >
        <lego-components_button
          size="m"
          type="link"
          url="passport.ya.ru/auth?retpath=https%3A%2F%2Fdv.ya.ru%2F%3FforceDefaultAccount%3D1&origin=disk_dv_web_signin_ru"
          view="raised"
        >
          <span>
            Войти
          </span>
        </lego-components_button>
      </div>
    </div>
  </header>
  <div
    class="main"
  >
    <div
      class="no-url"
    >
      <h2>
        <span>
          Добро пожаловать!
        </span>
      </h2>
    </div>
    <lego-components_modal
      autoclosable="false"
      theme="normal"
      trapfocus="false"
      visible="false"
    >
      <div
        class="wrapper"
      >
        <span
          class="close"
        >
          <ufo-rocks_icon />
        </span>
        <div
          class="content"
        />
      </div>
    </lego-components_modal>
  </div>
</div>
`;

exports[`dv-with-advertisement (experiment) 1`] = `
<div
  class="small-header with-content-direct with-native-direct with-native-direct-after-title with-bottom-native-direct"
>
  <header
    class="head"
  >
    <div
      class="header header_has-center header"
    >
      <div
        class="header__side-left"
      >
        <span
          class="logo"
        >
          <a
            class="logo__link logo__link_yandex"
            href="//yandex.ru"
            rel="noopener noreferrer"
          />
          <svg
            class="logo__svg"
            height="30"
            width="69"
          >
            <g>
              <path
                d="M34.997 22.97V9.024l-7.26-.026v1.363c0 4.248-.316 9.22-1.775 12.61h-1.045v5.036H27.2V25h6.846v3.006h2.22V22.97h-1.27.001zm11.444-.95c-.633.444-1.743 1.078-3.138 1.078-1.965 0-2.948-1.57-2.948-5.184h6.657V16.55c0-5.42-1.774-7.75-4.437-7.75-3.392 0-4.818 3.742-4.818 8.877 0 4.914 2.03 7.545 5.325 7.545 1.585 0 2.917-.507 3.93-1.3l-.57-1.902h-.001zm-25.415-6h-3.523V9.034H15.03V25.01h2.472v-6.96h3.523v6.96h2.44V9.034h-2.44v6.987l.001-.001zM58.9 25l-4.534-8.464 3.962-7.513h-2.504l-3.836 7.386V9.022h-2.473V25h2.473v-7.957L56.204 25H58.9zm5.8.222c1.458 0 2.472-.476 3.328-1.205l-.57-1.838c-.57.506-1.49.98-2.695.98-1.997 0-2.948-2.28-2.948-6.275 0-4.026 1.268-6.023 3.043-6.023 1.015 0 1.966.54 2.63 1.11l.35-2.347c-.697-.443-1.522-.824-2.948-.824-3.74 0-5.674 3.203-5.674 8.212 0 5.452 2.06 8.21 5.484 8.21zm-32.144-2.25h-4.248c1.332-3.393 1.49-8.306 1.49-11.666v-.286h2.758v11.952zm11.834-8.886c.062.567.09 1.198.09 1.874h-4.09c.16-2.853.662-5.13 2.183-5.13 1.073 0 1.626 1.536 1.817 3.256z"
                fill="#000"
              />
              <path
                d="M9.547 25.006h2.44V2H8.343C4.761 2 1.728 4.377 1.728 9.132c0 3.39 1.352 5.572 3.35 6.586L.83 25.006h2.82l3.868-8.685h2.03v8.686l-.001-.001zM8.27 14.303c-2.125 0-3.864-1.357-3.864-5.003 0-.214.006-.422.018-.623.198-3.34 1.99-4.704 3.845-4.704h1.3v10.33h-1.3.001z"
                fill="#F00"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="header__side-center"
      />
      <div
        class="header__side-right"
      >
        <lego-components_button
          size="m"
          type="link"
          url="passport.ya.ru/auth?retpath=https%3A%2F%2Fdv.ya.ru%2F%3FforceDefaultAccount%3D1&origin=disk_dv_web_signin_ru"
          view="raised"
        >
          <span>
            Войти
          </span>
        </lego-components_button>
      </div>
    </div>
  </header>
  <div
    class="main"
  >
    <div
      class="no-url"
    >
      <h2>
        <span>
          Добро пожаловать!
        </span>
      </h2>
    </div>
    <lego-components_modal
      autoclosable="false"
      theme="normal"
      trapfocus="false"
      visible="false"
    >
      <div
        class="wrapper"
      >
        <span
          class="close"
        >
          <ufo-rocks_icon />
        </span>
        <div
          class="content"
        />
      </div>
    </lego-components_modal>
  </div>
</div>
`;

exports[`dv-with-edit-promo 1`] = `
<div
  class="small-header with-content-direct with-native-direct with-native-direct-after-title with-bottom-native-direct with-edit-promo"
>
  <header
    class="head"
  >
    <div
      class="editPromo"
    >
      <div
        class="content"
      >
        <span
          class="contentWrapper"
        >
          <div
            class="officeDocsIcon"
          />
          <div
            class="main"
          >
            <span
              class="title"
            >
              Редактируйте документы в браузере
            </span>
            <span
              class="text"
            >
              Для этого нужно авторизоваться на Яндексе.
Изменённые файлы сохранятся на Яндекс Диске.
            </span>
          </div>
        </span>
      </div>
      <span
        class="close"
      >
        <ufo-rocks_icon />
      </span>
    </div>
    <div
      class="header header_has-center header"
    >
      <div
        class="header__side-left"
      >
        <span
          class="logo"
        >
          <a
            class="logo__link logo__link_yandex"
            href="//yandex.ru"
            rel="noopener noreferrer"
          />
          <svg
            class="logo__svg"
            height="30"
            width="69"
          >
            <g>
              <path
                d="M34.997 22.97V9.024l-7.26-.026v1.363c0 4.248-.316 9.22-1.775 12.61h-1.045v5.036H27.2V25h6.846v3.006h2.22V22.97h-1.27.001zm11.444-.95c-.633.444-1.743 1.078-3.138 1.078-1.965 0-2.948-1.57-2.948-5.184h6.657V16.55c0-5.42-1.774-7.75-4.437-7.75-3.392 0-4.818 3.742-4.818 8.877 0 4.914 2.03 7.545 5.325 7.545 1.585 0 2.917-.507 3.93-1.3l-.57-1.902h-.001zm-25.415-6h-3.523V9.034H15.03V25.01h2.472v-6.96h3.523v6.96h2.44V9.034h-2.44v6.987l.001-.001zM58.9 25l-4.534-8.464 3.962-7.513h-2.504l-3.836 7.386V9.022h-2.473V25h2.473v-7.957L56.204 25H58.9zm5.8.222c1.458 0 2.472-.476 3.328-1.205l-.57-1.838c-.57.506-1.49.98-2.695.98-1.997 0-2.948-2.28-2.948-6.275 0-4.026 1.268-6.023 3.043-6.023 1.015 0 1.966.54 2.63 1.11l.35-2.347c-.697-.443-1.522-.824-2.948-.824-3.74 0-5.674 3.203-5.674 8.212 0 5.452 2.06 8.21 5.484 8.21zm-32.144-2.25h-4.248c1.332-3.393 1.49-8.306 1.49-11.666v-.286h2.758v11.952zm11.834-8.886c.062.567.09 1.198.09 1.874h-4.09c.16-2.853.662-5.13 2.183-5.13 1.073 0 1.626 1.536 1.817 3.256z"
                fill="#000"
              />
              <path
                d="M9.547 25.006h2.44V2H8.343C4.761 2 1.728 4.377 1.728 9.132c0 3.39 1.352 5.572 3.35 6.586L.83 25.006h2.82l3.868-8.685h2.03v8.686l-.001-.001zM8.27 14.303c-2.125 0-3.864-1.357-3.864-5.003 0-.214.006-.422.018-.623.198-3.34 1.99-4.704 3.845-4.704h1.3v10.33h-1.3.001z"
                fill="#F00"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="header__side-center"
      >
        <ufo-rocks_hover-tooltip
          classname="actionButton"
          text="Документ можно отредактировать.
Копия сохранится на Яндекс Диск в папку «Загрузки»."
        >
          <lego-components_button
            classname="edit-button"
            iconleft="className => /*#__PURE__*/_react.default.createElement(_edit.default, {
  iconSize: \\"m\\",
  cls: className
})"
            onclick="event => {
    metrika.countEditing('click', title);

    if (maybeBlockActionOverdraft()) {
      // переход по ссылке в данном случае делать не надо
      event.preventDefault(); // прерываем всплытие, т.к. клик по body провоцирует событие, скрывающее попапы в доксах
      // а в случае блокировки овердрафтника - как раз нужно показать попап

      event.stopPropagation();
      return;
    }

    if (!isFromDisk) {
      updateAction('edit', {
        state: 'READY'
      });
    }

    if (protocol === 'ya-browser:' && !auth && !actions.edit.editPromoDisabled) {
      disableEditPromo();
    }
  }"
            size="m"
            target="_blank"
            type="link"
            url="edit-url"
            view="raised"
          >
            Редактировать копию
          </lego-components_button>
        </ufo-rocks_hover-tooltip>
      </div>
      <div
        class="header__side-right"
      >
        <lego-components_button
          size="m"
          type="link"
          url="passport.ya.ru/auth?retpath=https%3A%2F%2Fdv.ya.ru%2F%3FforceDefaultAccount%3D1&origin=disk_dv_web_signin_ru"
          view="raised"
        >
          <span>
            Войти
          </span>
        </lego-components_button>
      </div>
    </div>
  </header>
  <div
    class="main"
  >
    <div
      class="with-bottom-direct"
    >
      <div
        class="html js-doc-html"
      >
        <div
          class="pages"
        >
          <div
            class="titleWrapper"
          >
            <h2
              class="title"
            />
          </div>
          <div
            class="sliderButtonsWrapper"
          >
            <div
              class="sliderButtons"
              style="max-width:unset;width:100%"
            />
            <div
              class="sliderButtonsDocsRightMargin"
            />
          </div>
          <span
            class="top-0"
          />
          <div
            class="direct bottom-direct placeholder"
          />
          <div
            class="bottom-0"
          />
        </div>
      </div>
    </div>
    <lego-components_modal
      autoclosable="false"
      theme="normal"
      trapfocus="false"
      visible="false"
    >
      <div
        class="wrapper"
      >
        <span
          class="close"
        >
          <ufo-rocks_icon />
        </span>
        <div
          class="content"
        />
      </div>
    </lego-components_modal>
  </div>
</div>
`;

exports[`dv-with-touch-advertisement (default) 1`] = `
<div
  class="with-mobile-direct"
>
  <header
    class="head"
  >
    <div
      class="header header_has-center header"
    >
      <div
        class="header__side-left"
      >
        <span
          class="logo"
        >
          <a
            class="logo__link logo__link_yandex"
            href="//yandex.ru"
            rel="noopener noreferrer"
          />
          <svg
            class="logo__svg"
            height="30"
            width="69"
          >
            <g>
              <path
                d="M34.997 22.97V9.024l-7.26-.026v1.363c0 4.248-.316 9.22-1.775 12.61h-1.045v5.036H27.2V25h6.846v3.006h2.22V22.97h-1.27.001zm11.444-.95c-.633.444-1.743 1.078-3.138 1.078-1.965 0-2.948-1.57-2.948-5.184h6.657V16.55c0-5.42-1.774-7.75-4.437-7.75-3.392 0-4.818 3.742-4.818 8.877 0 4.914 2.03 7.545 5.325 7.545 1.585 0 2.917-.507 3.93-1.3l-.57-1.902h-.001zm-25.415-6h-3.523V9.034H15.03V25.01h2.472v-6.96h3.523v6.96h2.44V9.034h-2.44v6.987l.001-.001zM58.9 25l-4.534-8.464 3.962-7.513h-2.504l-3.836 7.386V9.022h-2.473V25h2.473v-7.957L56.204 25H58.9zm5.8.222c1.458 0 2.472-.476 3.328-1.205l-.57-1.838c-.57.506-1.49.98-2.695.98-1.997 0-2.948-2.28-2.948-6.275 0-4.026 1.268-6.023 3.043-6.023 1.015 0 1.966.54 2.63 1.11l.35-2.347c-.697-.443-1.522-.824-2.948-.824-3.74 0-5.674 3.203-5.674 8.212 0 5.452 2.06 8.21 5.484 8.21zm-32.144-2.25h-4.248c1.332-3.393 1.49-8.306 1.49-11.666v-.286h2.758v11.952zm11.834-8.886c.062.567.09 1.198.09 1.874h-4.09c.16-2.853.662-5.13 2.183-5.13 1.073 0 1.626 1.536 1.817 3.256z"
                fill="#000"
              />
              <path
                d="M9.547 25.006h2.44V2H8.343C4.761 2 1.728 4.377 1.728 9.132c0 3.39 1.352 5.572 3.35 6.586L.83 25.006h2.82l3.868-8.685h2.03v8.686l-.001-.001zM8.27 14.303c-2.125 0-3.864-1.357-3.864-5.003 0-.214.006-.422.018-.623.198-3.34 1.99-4.704 3.845-4.704h1.3v10.33h-1.3.001z"
                fill="#F00"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="header__side-center"
      />
      <div
        class="header__side-right"
      >
        <lego-components_button
          size="m"
          type="link"
          url="passport.ya.ru/auth?retpath=https%3A%2F%2Fdv.ya.ru%2F%3FforceDefaultAccount%3D1&origin=disk_dv_touch_signin_ru"
          view="raised"
        >
          <span>
            Войти
          </span>
        </lego-components_button>
      </div>
    </div>
    <iframe
      class="direct headDirectMobile top-direct js-direct-mobile"
      src="/direct.html?blockId=R-I-267060-2"
    />
  </header>
  <div
    class="main"
  >
    <div
      class="no-url"
    >
      <h2>
        <span>
          Добро пожаловать!
        </span>
      </h2>
    </div>
    <div
      class="snackBar"
    />
  </div>
</div>
`;

exports[`mobile disk_dv_in_docs_touch_exp 1`] = `
<div
  class="embed-docs mobile with-mobile-direct"
>
  <header
    class="head"
  >
    <iframe
      class="direct headDirectMobile top-direct js-direct-mobile"
      src="/direct.html?blockId=R-I-267060-2"
    />
  </header>
  <div
    class="topLevelTitle"
  >
    <div
      class="layoutWrapper"
    >
      <div
        class="title"
        title="wow.pdf"
      >
        wow.pdf
      </div>
    </div>
  </div>
  <div />
  <div
    class="wrapper"
  />
  <div
    class="main"
  >
    <object
      class="iframe"
      data="/some/iframe/url"
      type="application/pdf"
    >
      <div>
         
      </div>
    </object>
    <div
      class="snackBar"
    />
  </div>
</div>
`;

exports[`mobile-dv 1`] = `
<div
  class="with-mobile-direct"
>
  <header
    class="head"
  >
    <div
      class="header header_has-center header"
    >
      <div
        class="header__side-left"
      >
        <span
          class="logo"
        >
          <a
            class="logo__link logo__link_yandex"
            href="//yandex.ru"
            rel="noopener noreferrer"
          />
          <svg
            class="logo__svg"
            height="30"
            width="69"
          >
            <g>
              <path
                d="M34.997 22.97V9.024l-7.26-.026v1.363c0 4.248-.316 9.22-1.775 12.61h-1.045v5.036H27.2V25h6.846v3.006h2.22V22.97h-1.27.001zm11.444-.95c-.633.444-1.743 1.078-3.138 1.078-1.965 0-2.948-1.57-2.948-5.184h6.657V16.55c0-5.42-1.774-7.75-4.437-7.75-3.392 0-4.818 3.742-4.818 8.877 0 4.914 2.03 7.545 5.325 7.545 1.585 0 2.917-.507 3.93-1.3l-.57-1.902h-.001zm-25.415-6h-3.523V9.034H15.03V25.01h2.472v-6.96h3.523v6.96h2.44V9.034h-2.44v6.987l.001-.001zM58.9 25l-4.534-8.464 3.962-7.513h-2.504l-3.836 7.386V9.022h-2.473V25h2.473v-7.957L56.204 25H58.9zm5.8.222c1.458 0 2.472-.476 3.328-1.205l-.57-1.838c-.57.506-1.49.98-2.695.98-1.997 0-2.948-2.28-2.948-6.275 0-4.026 1.268-6.023 3.043-6.023 1.015 0 1.966.54 2.63 1.11l.35-2.347c-.697-.443-1.522-.824-2.948-.824-3.74 0-5.674 3.203-5.674 8.212 0 5.452 2.06 8.21 5.484 8.21zm-32.144-2.25h-4.248c1.332-3.393 1.49-8.306 1.49-11.666v-.286h2.758v11.952zm11.834-8.886c.062.567.09 1.198.09 1.874h-4.09c.16-2.853.662-5.13 2.183-5.13 1.073 0 1.626 1.536 1.817 3.256z"
                fill="#000"
              />
              <path
                d="M9.547 25.006h2.44V2H8.343C4.761 2 1.728 4.377 1.728 9.132c0 3.39 1.352 5.572 3.35 6.586L.83 25.006h2.82l3.868-8.685h2.03v8.686l-.001-.001zM8.27 14.303c-2.125 0-3.864-1.357-3.864-5.003 0-.214.006-.422.018-.623.198-3.34 1.99-4.704 3.845-4.704h1.3v10.33h-1.3.001z"
                fill="#F00"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="header__side-center"
      />
      <div
        class="header__side-right"
      >
        <lego-components_button
          size="m"
          type="link"
          url="passport.ya.ru/auth?retpath=https%3A%2F%2Fdv.ya.ru%2F%3FforceDefaultAccount%3D1&origin=disk_dv_touch_signin_ru"
          view="raised"
        >
          <span>
            Войти
          </span>
        </lego-components_button>
      </div>
    </div>
    <iframe
      class="direct headDirectMobile top-direct js-direct-mobile"
      src="/direct.html?blockId=R-I-267060-2"
    />
  </header>
  <div
    class="main"
  >
    <div
      class="no-url"
    >
      <h2>
        <span>
          Добро пожаловать!
        </span>
      </h2>
    </div>
    <div
      class="snackBar"
    />
  </div>
</div>
`;

exports[`tutor-embed 1`] = `
<div
  class="embed-tutor small-header"
>
  <header
    class="head"
  />
  <div
    class="main"
  >
    <div
      class="no-url"
    >
      <h2>
        <span>
          Добро пожаловать!
        </span>
      </h2>
    </div>
    <lego-components_modal
      autoclosable="false"
      theme="normal"
      trapfocus="false"
      visible="false"
    >
      <div
        class="wrapper"
      >
        <span
          class="close"
        >
          <ufo-rocks_icon />
        </span>
        <div
          class="content"
        />
      </div>
    </lego-components_modal>
  </div>
</div>
`;

exports[`with custom direct exp on desktop archive-with-advertisement 1`] = `
<div
  class="small-header with-content-direct with-native-direct with-native-direct-after-title with-bottom-native-direct"
>
  <header
    class="head"
  >
    <div
      class="header header_has-center header"
    >
      <div
        class="header__side-left"
      >
        <span
          class="logo"
        >
          <a
            class="logo__link logo__link_yandex"
            href="//yandex.ru"
            rel="noopener noreferrer"
          />
          <svg
            class="logo__svg"
            height="30"
            width="69"
          >
            <g>
              <path
                d="M34.997 22.97V9.024l-7.26-.026v1.363c0 4.248-.316 9.22-1.775 12.61h-1.045v5.036H27.2V25h6.846v3.006h2.22V22.97h-1.27.001zm11.444-.95c-.633.444-1.743 1.078-3.138 1.078-1.965 0-2.948-1.57-2.948-5.184h6.657V16.55c0-5.42-1.774-7.75-4.437-7.75-3.392 0-4.818 3.742-4.818 8.877 0 4.914 2.03 7.545 5.325 7.545 1.585 0 2.917-.507 3.93-1.3l-.57-1.902h-.001zm-25.415-6h-3.523V9.034H15.03V25.01h2.472v-6.96h3.523v6.96h2.44V9.034h-2.44v6.987l.001-.001zM58.9 25l-4.534-8.464 3.962-7.513h-2.504l-3.836 7.386V9.022h-2.473V25h2.473v-7.957L56.204 25H58.9zm5.8.222c1.458 0 2.472-.476 3.328-1.205l-.57-1.838c-.57.506-1.49.98-2.695.98-1.997 0-2.948-2.28-2.948-6.275 0-4.026 1.268-6.023 3.043-6.023 1.015 0 1.966.54 2.63 1.11l.35-2.347c-.697-.443-1.522-.824-2.948-.824-3.74 0-5.674 3.203-5.674 8.212 0 5.452 2.06 8.21 5.484 8.21zm-32.144-2.25h-4.248c1.332-3.393 1.49-8.306 1.49-11.666v-.286h2.758v11.952zm11.834-8.886c.062.567.09 1.198.09 1.874h-4.09c.16-2.853.662-5.13 2.183-5.13 1.073 0 1.626 1.536 1.817 3.256z"
                fill="#000"
              />
              <path
                d="M9.547 25.006h2.44V2H8.343C4.761 2 1.728 4.377 1.728 9.132c0 3.39 1.352 5.572 3.35 6.586L.83 25.006h2.82l3.868-8.685h2.03v8.686l-.001-.001zM8.27 14.303c-2.125 0-3.864-1.357-3.864-5.003 0-.214.006-.422.018-.623.198-3.34 1.99-4.704 3.845-4.704h1.3v10.33h-1.3.001z"
                fill="#F00"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="header__side-center"
      />
      <div
        class="header__side-right"
      >
        <lego-components_button
          size="m"
          type="link"
          url="passport.ya.ru/auth?retpath=https%3A%2F%2Fdv.ya.ru%2F%3FforceDefaultAccount%3D1&origin=disk_dv_web_signin_ru"
          view="raised"
        >
          <span>
            Войти
          </span>
        </lego-components_button>
      </div>
    </div>
  </header>
  <div
    class="main"
  >
    <span
      class="top-0"
    />
    <div
      class="direct top-direct placeholder"
    />
    <div
      class="bottom-0"
    />
    <div>
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        />
      </div>
      <div
        class="godot"
      >
        <lego-components_spin
          progress="true"
          size="l"
          view="default"
        />
      </div>
    </div>
    <lego-components_modal
      autoclosable="false"
      theme="normal"
      trapfocus="false"
      visible="false"
    >
      <div
        class="wrapper"
      >
        <span
          class="close"
        >
          <ufo-rocks_icon />
        </span>
        <div
          class="content"
        />
      </div>
    </lego-components_modal>
  </div>
</div>
`;

exports[`with custom direct exp on desktop dv 1`] = `
<div
  class="small-header with-content-direct with-native-direct with-native-direct-after-title with-bottom-native-direct"
>
  <header
    class="head"
  >
    <div
      class="header header_has-center header"
    >
      <div
        class="header__side-left"
      >
        <span
          class="logo"
        >
          <a
            class="logo__link logo__link_yandex"
            href="//yandex.ru"
            rel="noopener noreferrer"
          />
          <svg
            class="logo__svg"
            height="30"
            width="69"
          >
            <g>
              <path
                d="M34.997 22.97V9.024l-7.26-.026v1.363c0 4.248-.316 9.22-1.775 12.61h-1.045v5.036H27.2V25h6.846v3.006h2.22V22.97h-1.27.001zm11.444-.95c-.633.444-1.743 1.078-3.138 1.078-1.965 0-2.948-1.57-2.948-5.184h6.657V16.55c0-5.42-1.774-7.75-4.437-7.75-3.392 0-4.818 3.742-4.818 8.877 0 4.914 2.03 7.545 5.325 7.545 1.585 0 2.917-.507 3.93-1.3l-.57-1.902h-.001zm-25.415-6h-3.523V9.034H15.03V25.01h2.472v-6.96h3.523v6.96h2.44V9.034h-2.44v6.987l.001-.001zM58.9 25l-4.534-8.464 3.962-7.513h-2.504l-3.836 7.386V9.022h-2.473V25h2.473v-7.957L56.204 25H58.9zm5.8.222c1.458 0 2.472-.476 3.328-1.205l-.57-1.838c-.57.506-1.49.98-2.695.98-1.997 0-2.948-2.28-2.948-6.275 0-4.026 1.268-6.023 3.043-6.023 1.015 0 1.966.54 2.63 1.11l.35-2.347c-.697-.443-1.522-.824-2.948-.824-3.74 0-5.674 3.203-5.674 8.212 0 5.452 2.06 8.21 5.484 8.21zm-32.144-2.25h-4.248c1.332-3.393 1.49-8.306 1.49-11.666v-.286h2.758v11.952zm11.834-8.886c.062.567.09 1.198.09 1.874h-4.09c.16-2.853.662-5.13 2.183-5.13 1.073 0 1.626 1.536 1.817 3.256z"
                fill="#000"
              />
              <path
                d="M9.547 25.006h2.44V2H8.343C4.761 2 1.728 4.377 1.728 9.132c0 3.39 1.352 5.572 3.35 6.586L.83 25.006h2.82l3.868-8.685h2.03v8.686l-.001-.001zM8.27 14.303c-2.125 0-3.864-1.357-3.864-5.003 0-.214.006-.422.018-.623.198-3.34 1.99-4.704 3.845-4.704h1.3v10.33h-1.3.001z"
                fill="#F00"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="header__side-center"
      />
      <div
        class="header__side-right"
      >
        <lego-components_button
          size="m"
          type="link"
          url="passport.ya.ru/auth?retpath=https%3A%2F%2Fdv.ya.ru%2F%3FforceDefaultAccount%3D1&origin=disk_dv_web_signin_ru"
          view="raised"
        >
          <span>
            Войти
          </span>
        </lego-components_button>
      </div>
    </div>
  </header>
  <div
    class="main"
  >
    <div
      class="no-url"
    >
      <h2>
        <span>
          Добро пожаловать!
        </span>
      </h2>
    </div>
    <lego-components_modal
      autoclosable="false"
      theme="normal"
      trapfocus="false"
      visible="false"
    >
      <div
        class="wrapper"
      >
        <span
          class="close"
        >
          <ufo-rocks_icon />
        </span>
        <div
          class="content"
        />
      </div>
    </lego-components_modal>
  </div>
</div>
`;

exports[`with custom direct exp on desktop dv with fullscreen-slider 1`] = `
<div
  class="small-header with-content-direct with-native-direct with-native-direct-after-title with-bottom-native-direct"
>
  <header
    class="head"
  >
    <div
      class="header header_has-center header"
    >
      <div
        class="header__side-left"
      >
        <span
          class="logo"
        >
          <a
            class="logo__link logo__link_yandex"
            href="//yandex.ru"
            rel="noopener noreferrer"
          />
          <svg
            class="logo__svg"
            height="30"
            width="69"
          >
            <g>
              <path
                d="M34.997 22.97V9.024l-7.26-.026v1.363c0 4.248-.316 9.22-1.775 12.61h-1.045v5.036H27.2V25h6.846v3.006h2.22V22.97h-1.27.001zm11.444-.95c-.633.444-1.743 1.078-3.138 1.078-1.965 0-2.948-1.57-2.948-5.184h6.657V16.55c0-5.42-1.774-7.75-4.437-7.75-3.392 0-4.818 3.742-4.818 8.877 0 4.914 2.03 7.545 5.325 7.545 1.585 0 2.917-.507 3.93-1.3l-.57-1.902h-.001zm-25.415-6h-3.523V9.034H15.03V25.01h2.472v-6.96h3.523v6.96h2.44V9.034h-2.44v6.987l.001-.001zM58.9 25l-4.534-8.464 3.962-7.513h-2.504l-3.836 7.386V9.022h-2.473V25h2.473v-7.957L56.204 25H58.9zm5.8.222c1.458 0 2.472-.476 3.328-1.205l-.57-1.838c-.57.506-1.49.98-2.695.98-1.997 0-2.948-2.28-2.948-6.275 0-4.026 1.268-6.023 3.043-6.023 1.015 0 1.966.54 2.63 1.11l.35-2.347c-.697-.443-1.522-.824-2.948-.824-3.74 0-5.674 3.203-5.674 8.212 0 5.452 2.06 8.21 5.484 8.21zm-32.144-2.25h-4.248c1.332-3.393 1.49-8.306 1.49-11.666v-.286h2.758v11.952zm11.834-8.886c.062.567.09 1.198.09 1.874h-4.09c.16-2.853.662-5.13 2.183-5.13 1.073 0 1.626 1.536 1.817 3.256z"
                fill="#000"
              />
              <path
                d="M9.547 25.006h2.44V2H8.343C4.761 2 1.728 4.377 1.728 9.132c0 3.39 1.352 5.572 3.35 6.586L.83 25.006h2.82l3.868-8.685h2.03v8.686l-.001-.001zM8.27 14.303c-2.125 0-3.864-1.357-3.864-5.003 0-.214.006-.422.018-.623.198-3.34 1.99-4.704 3.845-4.704h1.3v10.33h-1.3.001z"
                fill="#F00"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="header__side-center"
      />
      <div
        class="header__side-right"
      >
        <lego-components_button
          size="m"
          type="link"
          url="passport.ya.ru/auth?retpath=https%3A%2F%2Fdv.ya.ru%2F%3FforceDefaultAccount%3D1&origin=disk_dv_web_signin_ru"
          view="raised"
        >
          <span>
            Войти
          </span>
        </lego-components_button>
      </div>
    </div>
  </header>
  <div
    class="main mainOnePage"
  >
    <div
      class=""
    >
      <div
        class="html js-doc-html html_onePage"
      >
        <div
          class="pages"
        >
          <div
            class="titleWrapper"
          >
            <h2
              class="title"
            >
              вжух-вжух.pdf
            </h2>
          </div>
          <span
            class="top-0"
          />
          <div
            class="direct top-direct placeholder"
          />
          <div
            class="bottom-0"
          />
          <div
            class="js-doc-page page onlyOnePageMode page_presentation page_hidden waitingImageStub_blinking"
            data-index="1"
          >
            <div
              class="__page-1 wait"
            />
          </div>
          <div
            class="js-doc-page page onlyOnePageMode page_presentation page_hidden waitingImageStub"
            data-index="2"
          >
            <div
              class="__page-2 wait"
            />
          </div>
          <div
            class="js-doc-page page onlyOnePageMode page_presentation page_hidden waitingImageStub"
            data-index="3"
          >
            <div
              class="__page-3 wait"
            />
          </div>
          <div
            class="sliderButtonsWrapper onePage"
          >
            <div
              class="sliderButtons"
              style="max-width:unset;width:100%"
            />
            <div
              class="sliderButtonsDocsRightMargin"
            />
          </div>
        </div>
      </div>
      <div
        class="pagerWrapper"
      >
        <div
          class="pagerLayout onePage"
        >
          <div
            class="pager pager_withFullscreen"
          >
            <div
              class="pageCounterWrapper"
            >
              <input
                class="input"
                min="1"
                type="number"
                value="1"
              />
              <span
                class="pageCounter"
              >
                1 из 3
              </span>
            </div>
            <div
              class="fullscreen"
            >
              <lego-components_button
                classname="fullscreen__button"
                controlref="[object Object]"
                icon="className => /*#__PURE__*/_react.default.createElement(_fullscreen.default, {
        type: isInFullscreen ? 'exit' : '',
        cls: className
      })"
                onclick="function () { [native code] }"
                size="s"
                view="clear-inverse"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <lego-components_modal
      autoclosable="false"
      theme="normal"
      trapfocus="false"
      visible="false"
    >
      <div
        class="wrapper"
      >
        <span
          class="close"
        >
          <ufo-rocks_icon />
        </span>
        <div
          class="content"
        />
      </div>
    </lego-components_modal>
    <div
      class="slider fullscreenSlider fullscreen-slider"
    >
      <div
        aria-live="assertive"
        class="slider__a11y"
        role="alert"
      />
      <div
        class="slider__items"
      >
        <div
          aria-hidden="false"
          class="slider__item slider__item_active"
        >
          <div
            class="slider__content"
          >
            <lego-components_spin
              progress="true"
              size="l"
              view="default"
            />
          </div>
        </div>
        <div
          aria-hidden="true"
          class="slider__item"
        />
        <div
          aria-hidden="true"
          class="slider__item"
        />
      </div>
      <div
        class="slider__toolbar slider__toolbar_visible"
      >
        <div
          class="pagerWrapper"
        >
          <div
            class="pagerLayout onePage"
          >
            <div
              class="pager_visible pager_withFullscreen"
            >
              <div
                class="pageCounterWrapper"
              >
                <input
                  class="input"
                  min="1"
                  type="number"
                  value="1"
                />
                <span
                  class="pageCounter"
                >
                  1 из 3
                </span>
              </div>
              <div
                class="fullscreen"
              >
                <lego-components_button
                  classname="fullscreen__button"
                  controlref="[object Object]"
                  icon="className => /*#__PURE__*/_react.default.createElement(_fullscreen.default, {
        type: isInFullscreen ? 'exit' : '',
        cls: className
      })"
                  onclick="function () { [native code] }"
                  size="s"
                  view="clear-inverse"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        autocomplete="off"
        class="Button2 Button2_view_clear Button2_size_xxxl switch-arrow-button switch-arrow-button_right switch-arrow-button_theme_dark"
        type="button"
      >
        <span
          class="ufo-icon icon Button2-Icon"
        >
          <svg
            class="ufo-icon__icon"
            height="48"
            role="none"
            viewBox="0 0 16 16"
            width="48"
          >
            <path
              d="M6.4 12l4-4-4-4-.8.8L8.8 8l-3.2 3.2z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`with custom direct exp on desktop dv-corp 1`] = `
<div
  class="is-corp small-header"
>
  <header
    class="head"
  >
    <div
      class="header header_has-center header"
    >
      <div
        class="header__side-left"
      >
        <span
          class="logo"
        >
          <a
            class="logo__link logo__link_yandex"
            href="//yandex.ru"
            rel="noopener noreferrer"
          />
          <svg
            class="logo__svg"
            height="30"
            width="69"
          >
            <g>
              <path
                d="M34.997 22.97V9.024l-7.26-.026v1.363c0 4.248-.316 9.22-1.775 12.61h-1.045v5.036H27.2V25h6.846v3.006h2.22V22.97h-1.27.001zm11.444-.95c-.633.444-1.743 1.078-3.138 1.078-1.965 0-2.948-1.57-2.948-5.184h6.657V16.55c0-5.42-1.774-7.75-4.437-7.75-3.392 0-4.818 3.742-4.818 8.877 0 4.914 2.03 7.545 5.325 7.545 1.585 0 2.917-.507 3.93-1.3l-.57-1.902h-.001zm-25.415-6h-3.523V9.034H15.03V25.01h2.472v-6.96h3.523v6.96h2.44V9.034h-2.44v6.987l.001-.001zM58.9 25l-4.534-8.464 3.962-7.513h-2.504l-3.836 7.386V9.022h-2.473V25h2.473v-7.957L56.204 25H58.9zm5.8.222c1.458 0 2.472-.476 3.328-1.205l-.57-1.838c-.57.506-1.49.98-2.695.98-1.997 0-2.948-2.28-2.948-6.275 0-4.026 1.268-6.023 3.043-6.023 1.015 0 1.966.54 2.63 1.11l.35-2.347c-.697-.443-1.522-.824-2.948-.824-3.74 0-5.674 3.203-5.674 8.212 0 5.452 2.06 8.21 5.484 8.21zm-32.144-2.25h-4.248c1.332-3.393 1.49-8.306 1.49-11.666v-.286h2.758v11.952zm11.834-8.886c.062.567.09 1.198.09 1.874h-4.09c.16-2.853.662-5.13 2.183-5.13 1.073 0 1.626 1.536 1.817 3.256z"
                fill="#000"
              />
              <path
                d="M9.547 25.006h2.44V2H8.343C4.761 2 1.728 4.377 1.728 9.132c0 3.39 1.352 5.572 3.35 6.586L.83 25.006h2.82l3.868-8.685h2.03v8.686l-.001-.001zM8.27 14.303c-2.125 0-3.864-1.357-3.864-5.003 0-.214.006-.422.018-.623.198-3.34 1.99-4.704 3.845-4.704h1.3v10.33h-1.3.001z"
                fill="#F00"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="header__side-center"
      />
      <div
        class="header__side-right"
      >
        <lego-components_button
          size="m"
          type="link"
          url="passport.ya.ru/auth?retpath=https%3A%2F%2Fdv.ya.ru%2F%3FforceDefaultAccount%3D1&origin=disk_dv_web_signin_ru"
          view="raised"
        >
          <span>
            Войти
          </span>
        </lego-components_button>
      </div>
    </div>
  </header>
  <div
    class="main"
  >
    <div
      class="no-url"
    >
      <h2>
        <span>
          Добро пожаловать!
        </span>
      </h2>
    </div>
    <lego-components_modal
      autoclosable="false"
      theme="normal"
      trapfocus="false"
      visible="false"
    >
      <div
        class="wrapper"
      >
        <span
          class="close"
        >
          <ufo-rocks_icon />
        </span>
        <div
          class="content"
        />
      </div>
    </lego-components_modal>
  </div>
</div>
`;

exports[`with custom direct exp on desktop dv-embed 1`] = `
<div
  class="embed-dv small-header"
>
  <header
    class="head"
  >
    <div
      class="embedActions"
    >
      <lego-components_button
        classname="backButton"
        iconleft="className => /*#__PURE__*/_react.default.createElement(_resourceIcon.default, {
  type: \\"dir_back\\",
  cls: className
})"
        onclick="function () { [native code] }"
        size="m"
        view="clear"
      >
        <span>
          Назад
        </span>
      </lego-components_button>
    </div>
  </header>
  <div
    class="main"
  >
    <div
      class="no-url"
    >
      <h2>
        <span>
          Добро пожаловать!
        </span>
      </h2>
    </div>
    <lego-components_modal
      autoclosable="false"
      theme="normal"
      trapfocus="false"
      visible="false"
    >
      <div
        class="wrapper"
      >
        <span
          class="close"
        >
          <ufo-rocks_icon />
        </span>
        <div
          class="content"
        />
      </div>
    </lego-components_modal>
  </div>
</div>
`;

exports[`with custom direct exp on desktop dv-with-advertisement (default) 1`] = `
<div
  class="small-header with-content-direct with-native-direct with-native-direct-after-title with-bottom-native-direct"
>
  <header
    class="head"
  >
    <div
      class="header header_has-center header"
    >
      <div
        class="header__side-left"
      >
        <span
          class="logo"
        >
          <a
            class="logo__link logo__link_yandex"
            href="//yandex.ru"
            rel="noopener noreferrer"
          />
          <svg
            class="logo__svg"
            height="30"
            width="69"
          >
            <g>
              <path
                d="M34.997 22.97V9.024l-7.26-.026v1.363c0 4.248-.316 9.22-1.775 12.61h-1.045v5.036H27.2V25h6.846v3.006h2.22V22.97h-1.27.001zm11.444-.95c-.633.444-1.743 1.078-3.138 1.078-1.965 0-2.948-1.57-2.948-5.184h6.657V16.55c0-5.42-1.774-7.75-4.437-7.75-3.392 0-4.818 3.742-4.818 8.877 0 4.914 2.03 7.545 5.325 7.545 1.585 0 2.917-.507 3.93-1.3l-.57-1.902h-.001zm-25.415-6h-3.523V9.034H15.03V25.01h2.472v-6.96h3.523v6.96h2.44V9.034h-2.44v6.987l.001-.001zM58.9 25l-4.534-8.464 3.962-7.513h-2.504l-3.836 7.386V9.022h-2.473V25h2.473v-7.957L56.204 25H58.9zm5.8.222c1.458 0 2.472-.476 3.328-1.205l-.57-1.838c-.57.506-1.49.98-2.695.98-1.997 0-2.948-2.28-2.948-6.275 0-4.026 1.268-6.023 3.043-6.023 1.015 0 1.966.54 2.63 1.11l.35-2.347c-.697-.443-1.522-.824-2.948-.824-3.74 0-5.674 3.203-5.674 8.212 0 5.452 2.06 8.21 5.484 8.21zm-32.144-2.25h-4.248c1.332-3.393 1.49-8.306 1.49-11.666v-.286h2.758v11.952zm11.834-8.886c.062.567.09 1.198.09 1.874h-4.09c.16-2.853.662-5.13 2.183-5.13 1.073 0 1.626 1.536 1.817 3.256z"
                fill="#000"
              />
              <path
                d="M9.547 25.006h2.44V2H8.343C4.761 2 1.728 4.377 1.728 9.132c0 3.39 1.352 5.572 3.35 6.586L.83 25.006h2.82l3.868-8.685h2.03v8.686l-.001-.001zM8.27 14.303c-2.125 0-3.864-1.357-3.864-5.003 0-.214.006-.422.018-.623.198-3.34 1.99-4.704 3.845-4.704h1.3v10.33h-1.3.001z"
                fill="#F00"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="header__side-center"
      />
      <div
        class="header__side-right"
      >
        <lego-components_button
          size="m"
          type="link"
          url="passport.ya.ru/auth?retpath=https%3A%2F%2Fdv.ya.ru%2F%3FforceDefaultAccount%3D1&origin=disk_dv_web_signin_ru"
          view="raised"
        >
          <span>
            Войти
          </span>
        </lego-components_button>
      </div>
    </div>
  </header>
  <div
    class="main"
  >
    <div
      class="no-url"
    >
      <h2>
        <span>
          Добро пожаловать!
        </span>
      </h2>
    </div>
    <lego-components_modal
      autoclosable="false"
      theme="normal"
      trapfocus="false"
      visible="false"
    >
      <div
        class="wrapper"
      >
        <span
          class="close"
        >
          <ufo-rocks_icon />
        </span>
        <div
          class="content"
        />
      </div>
    </lego-components_modal>
  </div>
</div>
`;

exports[`with custom direct exp on desktop dv-with-advertisement (experiment) 1`] = `
<div
  class="small-header with-content-direct with-native-direct with-native-direct-after-title with-bottom-native-direct"
>
  <header
    class="head"
  >
    <div
      class="header header_has-center header"
    >
      <div
        class="header__side-left"
      >
        <span
          class="logo"
        >
          <a
            class="logo__link logo__link_yandex"
            href="//yandex.ru"
            rel="noopener noreferrer"
          />
          <svg
            class="logo__svg"
            height="30"
            width="69"
          >
            <g>
              <path
                d="M34.997 22.97V9.024l-7.26-.026v1.363c0 4.248-.316 9.22-1.775 12.61h-1.045v5.036H27.2V25h6.846v3.006h2.22V22.97h-1.27.001zm11.444-.95c-.633.444-1.743 1.078-3.138 1.078-1.965 0-2.948-1.57-2.948-5.184h6.657V16.55c0-5.42-1.774-7.75-4.437-7.75-3.392 0-4.818 3.742-4.818 8.877 0 4.914 2.03 7.545 5.325 7.545 1.585 0 2.917-.507 3.93-1.3l-.57-1.902h-.001zm-25.415-6h-3.523V9.034H15.03V25.01h2.472v-6.96h3.523v6.96h2.44V9.034h-2.44v6.987l.001-.001zM58.9 25l-4.534-8.464 3.962-7.513h-2.504l-3.836 7.386V9.022h-2.473V25h2.473v-7.957L56.204 25H58.9zm5.8.222c1.458 0 2.472-.476 3.328-1.205l-.57-1.838c-.57.506-1.49.98-2.695.98-1.997 0-2.948-2.28-2.948-6.275 0-4.026 1.268-6.023 3.043-6.023 1.015 0 1.966.54 2.63 1.11l.35-2.347c-.697-.443-1.522-.824-2.948-.824-3.74 0-5.674 3.203-5.674 8.212 0 5.452 2.06 8.21 5.484 8.21zm-32.144-2.25h-4.248c1.332-3.393 1.49-8.306 1.49-11.666v-.286h2.758v11.952zm11.834-8.886c.062.567.09 1.198.09 1.874h-4.09c.16-2.853.662-5.13 2.183-5.13 1.073 0 1.626 1.536 1.817 3.256z"
                fill="#000"
              />
              <path
                d="M9.547 25.006h2.44V2H8.343C4.761 2 1.728 4.377 1.728 9.132c0 3.39 1.352 5.572 3.35 6.586L.83 25.006h2.82l3.868-8.685h2.03v8.686l-.001-.001zM8.27 14.303c-2.125 0-3.864-1.357-3.864-5.003 0-.214.006-.422.018-.623.198-3.34 1.99-4.704 3.845-4.704h1.3v10.33h-1.3.001z"
                fill="#F00"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="header__side-center"
      />
      <div
        class="header__side-right"
      >
        <lego-components_button
          size="m"
          type="link"
          url="passport.ya.ru/auth?retpath=https%3A%2F%2Fdv.ya.ru%2F%3FforceDefaultAccount%3D1&origin=disk_dv_web_signin_ru"
          view="raised"
        >
          <span>
            Войти
          </span>
        </lego-components_button>
      </div>
    </div>
  </header>
  <div
    class="main"
  >
    <div
      class="no-url"
    >
      <h2>
        <span>
          Добро пожаловать!
        </span>
      </h2>
    </div>
    <lego-components_modal
      autoclosable="false"
      theme="normal"
      trapfocus="false"
      visible="false"
    >
      <div
        class="wrapper"
      >
        <span
          class="close"
        >
          <ufo-rocks_icon />
        </span>
        <div
          class="content"
        />
      </div>
    </lego-components_modal>
  </div>
</div>
`;

exports[`with custom direct exp on desktop dv-with-edit-promo 1`] = `
<div
  class="small-header with-content-direct with-native-direct with-native-direct-after-title with-bottom-native-direct with-edit-promo"
>
  <header
    class="head"
  >
    <div
      class="editPromo"
    >
      <div
        class="content"
      >
        <span
          class="contentWrapper"
        >
          <div
            class="officeDocsIcon"
          />
          <div
            class="main"
          >
            <span
              class="title"
            >
              Редактируйте документы в браузере
            </span>
            <span
              class="text"
            >
              Для этого нужно авторизоваться на Яндексе.
Изменённые файлы сохранятся на Яндекс Диске.
            </span>
          </div>
        </span>
      </div>
      <span
        class="close"
      >
        <ufo-rocks_icon />
      </span>
    </div>
    <div
      class="header header_has-center header"
    >
      <div
        class="header__side-left"
      >
        <span
          class="logo"
        >
          <a
            class="logo__link logo__link_yandex"
            href="//yandex.ru"
            rel="noopener noreferrer"
          />
          <svg
            class="logo__svg"
            height="30"
            width="69"
          >
            <g>
              <path
                d="M34.997 22.97V9.024l-7.26-.026v1.363c0 4.248-.316 9.22-1.775 12.61h-1.045v5.036H27.2V25h6.846v3.006h2.22V22.97h-1.27.001zm11.444-.95c-.633.444-1.743 1.078-3.138 1.078-1.965 0-2.948-1.57-2.948-5.184h6.657V16.55c0-5.42-1.774-7.75-4.437-7.75-3.392 0-4.818 3.742-4.818 8.877 0 4.914 2.03 7.545 5.325 7.545 1.585 0 2.917-.507 3.93-1.3l-.57-1.902h-.001zm-25.415-6h-3.523V9.034H15.03V25.01h2.472v-6.96h3.523v6.96h2.44V9.034h-2.44v6.987l.001-.001zM58.9 25l-4.534-8.464 3.962-7.513h-2.504l-3.836 7.386V9.022h-2.473V25h2.473v-7.957L56.204 25H58.9zm5.8.222c1.458 0 2.472-.476 3.328-1.205l-.57-1.838c-.57.506-1.49.98-2.695.98-1.997 0-2.948-2.28-2.948-6.275 0-4.026 1.268-6.023 3.043-6.023 1.015 0 1.966.54 2.63 1.11l.35-2.347c-.697-.443-1.522-.824-2.948-.824-3.74 0-5.674 3.203-5.674 8.212 0 5.452 2.06 8.21 5.484 8.21zm-32.144-2.25h-4.248c1.332-3.393 1.49-8.306 1.49-11.666v-.286h2.758v11.952zm11.834-8.886c.062.567.09 1.198.09 1.874h-4.09c.16-2.853.662-5.13 2.183-5.13 1.073 0 1.626 1.536 1.817 3.256z"
                fill="#000"
              />
              <path
                d="M9.547 25.006h2.44V2H8.343C4.761 2 1.728 4.377 1.728 9.132c0 3.39 1.352 5.572 3.35 6.586L.83 25.006h2.82l3.868-8.685h2.03v8.686l-.001-.001zM8.27 14.303c-2.125 0-3.864-1.357-3.864-5.003 0-.214.006-.422.018-.623.198-3.34 1.99-4.704 3.845-4.704h1.3v10.33h-1.3.001z"
                fill="#F00"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="header__side-center"
      >
        <ufo-rocks_hover-tooltip
          classname="actionButton"
          text="Документ можно отредактировать.
Копия сохранится на Яндекс Диск в папку «Загрузки»."
        >
          <lego-components_button
            classname="edit-button"
            iconleft="className => /*#__PURE__*/_react.default.createElement(_edit.default, {
  iconSize: \\"m\\",
  cls: className
})"
            onclick="event => {
    metrika.countEditing('click', title);

    if (maybeBlockActionOverdraft()) {
      // переход по ссылке в данном случае делать не надо
      event.preventDefault(); // прерываем всплытие, т.к. клик по body провоцирует событие, скрывающее попапы в доксах
      // а в случае блокировки овердрафтника - как раз нужно показать попап

      event.stopPropagation();
      return;
    }

    if (!isFromDisk) {
      updateAction('edit', {
        state: 'READY'
      });
    }

    if (protocol === 'ya-browser:' && !auth && !actions.edit.editPromoDisabled) {
      disableEditPromo();
    }
  }"
            size="m"
            target="_blank"
            type="link"
            url="edit-url"
            view="raised"
          >
            Редактировать копию
          </lego-components_button>
        </ufo-rocks_hover-tooltip>
      </div>
      <div
        class="header__side-right"
      >
        <lego-components_button
          size="m"
          type="link"
          url="passport.ya.ru/auth?retpath=https%3A%2F%2Fdv.ya.ru%2F%3FforceDefaultAccount%3D1&origin=disk_dv_web_signin_ru"
          view="raised"
        >
          <span>
            Войти
          </span>
        </lego-components_button>
      </div>
    </div>
  </header>
  <div
    class="main"
  >
    <div
      class="with-bottom-direct"
    >
      <div
        class="html js-doc-html"
      >
        <div
          class="pages"
        >
          <div
            class="titleWrapper"
          >
            <h2
              class="title"
            />
          </div>
          <div
            class="sliderButtonsWrapper"
          >
            <div
              class="sliderButtons"
              style="max-width:unset;width:100%"
            />
            <div
              class="sliderButtonsDocsRightMargin"
            />
          </div>
          <span
            class="top-0"
          />
          <div
            class="direct bottom-direct placeholder"
          />
          <div
            class="bottom-0"
          />
        </div>
      </div>
    </div>
    <lego-components_modal
      autoclosable="false"
      theme="normal"
      trapfocus="false"
      visible="false"
    >
      <div
        class="wrapper"
      >
        <span
          class="close"
        >
          <ufo-rocks_icon />
        </span>
        <div
          class="content"
        />
      </div>
    </lego-components_modal>
  </div>
</div>
`;

exports[`with custom direct exp on desktop dv-with-touch-advertisement (default) 1`] = `
<div
  class="with-mobile-direct"
>
  <header
    class="head"
  >
    <div
      class="header header_has-center header"
    >
      <div
        class="header__side-left"
      >
        <span
          class="logo"
        >
          <a
            class="logo__link logo__link_yandex"
            href="//yandex.ru"
            rel="noopener noreferrer"
          />
          <svg
            class="logo__svg"
            height="30"
            width="69"
          >
            <g>
              <path
                d="M34.997 22.97V9.024l-7.26-.026v1.363c0 4.248-.316 9.22-1.775 12.61h-1.045v5.036H27.2V25h6.846v3.006h2.22V22.97h-1.27.001zm11.444-.95c-.633.444-1.743 1.078-3.138 1.078-1.965 0-2.948-1.57-2.948-5.184h6.657V16.55c0-5.42-1.774-7.75-4.437-7.75-3.392 0-4.818 3.742-4.818 8.877 0 4.914 2.03 7.545 5.325 7.545 1.585 0 2.917-.507 3.93-1.3l-.57-1.902h-.001zm-25.415-6h-3.523V9.034H15.03V25.01h2.472v-6.96h3.523v6.96h2.44V9.034h-2.44v6.987l.001-.001zM58.9 25l-4.534-8.464 3.962-7.513h-2.504l-3.836 7.386V9.022h-2.473V25h2.473v-7.957L56.204 25H58.9zm5.8.222c1.458 0 2.472-.476 3.328-1.205l-.57-1.838c-.57.506-1.49.98-2.695.98-1.997 0-2.948-2.28-2.948-6.275 0-4.026 1.268-6.023 3.043-6.023 1.015 0 1.966.54 2.63 1.11l.35-2.347c-.697-.443-1.522-.824-2.948-.824-3.74 0-5.674 3.203-5.674 8.212 0 5.452 2.06 8.21 5.484 8.21zm-32.144-2.25h-4.248c1.332-3.393 1.49-8.306 1.49-11.666v-.286h2.758v11.952zm11.834-8.886c.062.567.09 1.198.09 1.874h-4.09c.16-2.853.662-5.13 2.183-5.13 1.073 0 1.626 1.536 1.817 3.256z"
                fill="#000"
              />
              <path
                d="M9.547 25.006h2.44V2H8.343C4.761 2 1.728 4.377 1.728 9.132c0 3.39 1.352 5.572 3.35 6.586L.83 25.006h2.82l3.868-8.685h2.03v8.686l-.001-.001zM8.27 14.303c-2.125 0-3.864-1.357-3.864-5.003 0-.214.006-.422.018-.623.198-3.34 1.99-4.704 3.845-4.704h1.3v10.33h-1.3.001z"
                fill="#F00"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="header__side-center"
      />
      <div
        class="header__side-right"
      >
        <lego-components_button
          size="m"
          type="link"
          url="passport.ya.ru/auth?retpath=https%3A%2F%2Fdv.ya.ru%2F%3FforceDefaultAccount%3D1&origin=disk_dv_touch_signin_ru"
          view="raised"
        >
          <span>
            Войти
          </span>
        </lego-components_button>
      </div>
    </div>
    <iframe
      class="direct headDirectMobile top-direct js-direct-mobile"
      src="/direct.html?blockId=R-I-267060-2"
    />
  </header>
  <div
    class="main"
  >
    <div
      class="no-url"
    >
      <h2>
        <span>
          Добро пожаловать!
        </span>
      </h2>
    </div>
    <div
      class="snackBar"
    />
  </div>
</div>
`;

exports[`with custom direct exp on desktop mobile-dv 1`] = `
<div
  class="with-mobile-direct"
>
  <header
    class="head"
  >
    <div
      class="header header_has-center header"
    >
      <div
        class="header__side-left"
      >
        <span
          class="logo"
        >
          <a
            class="logo__link logo__link_yandex"
            href="//yandex.ru"
            rel="noopener noreferrer"
          />
          <svg
            class="logo__svg"
            height="30"
            width="69"
          >
            <g>
              <path
                d="M34.997 22.97V9.024l-7.26-.026v1.363c0 4.248-.316 9.22-1.775 12.61h-1.045v5.036H27.2V25h6.846v3.006h2.22V22.97h-1.27.001zm11.444-.95c-.633.444-1.743 1.078-3.138 1.078-1.965 0-2.948-1.57-2.948-5.184h6.657V16.55c0-5.42-1.774-7.75-4.437-7.75-3.392 0-4.818 3.742-4.818 8.877 0 4.914 2.03 7.545 5.325 7.545 1.585 0 2.917-.507 3.93-1.3l-.57-1.902h-.001zm-25.415-6h-3.523V9.034H15.03V25.01h2.472v-6.96h3.523v6.96h2.44V9.034h-2.44v6.987l.001-.001zM58.9 25l-4.534-8.464 3.962-7.513h-2.504l-3.836 7.386V9.022h-2.473V25h2.473v-7.957L56.204 25H58.9zm5.8.222c1.458 0 2.472-.476 3.328-1.205l-.57-1.838c-.57.506-1.49.98-2.695.98-1.997 0-2.948-2.28-2.948-6.275 0-4.026 1.268-6.023 3.043-6.023 1.015 0 1.966.54 2.63 1.11l.35-2.347c-.697-.443-1.522-.824-2.948-.824-3.74 0-5.674 3.203-5.674 8.212 0 5.452 2.06 8.21 5.484 8.21zm-32.144-2.25h-4.248c1.332-3.393 1.49-8.306 1.49-11.666v-.286h2.758v11.952zm11.834-8.886c.062.567.09 1.198.09 1.874h-4.09c.16-2.853.662-5.13 2.183-5.13 1.073 0 1.626 1.536 1.817 3.256z"
                fill="#000"
              />
              <path
                d="M9.547 25.006h2.44V2H8.343C4.761 2 1.728 4.377 1.728 9.132c0 3.39 1.352 5.572 3.35 6.586L.83 25.006h2.82l3.868-8.685h2.03v8.686l-.001-.001zM8.27 14.303c-2.125 0-3.864-1.357-3.864-5.003 0-.214.006-.422.018-.623.198-3.34 1.99-4.704 3.845-4.704h1.3v10.33h-1.3.001z"
                fill="#F00"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="header__side-center"
      />
      <div
        class="header__side-right"
      >
        <lego-components_button
          size="m"
          type="link"
          url="passport.ya.ru/auth?retpath=https%3A%2F%2Fdv.ya.ru%2F%3FforceDefaultAccount%3D1&origin=disk_dv_touch_signin_ru"
          view="raised"
        >
          <span>
            Войти
          </span>
        </lego-components_button>
      </div>
    </div>
    <iframe
      class="direct headDirectMobile top-direct js-direct-mobile"
      src="/direct.html?blockId=R-I-267060-2"
    />
  </header>
  <div
    class="main"
  >
    <div
      class="no-url"
    >
      <h2>
        <span>
          Добро пожаловать!
        </span>
      </h2>
    </div>
    <div
      class="snackBar"
    />
  </div>
</div>
`;

exports[`with custom direct exp on desktop tutor-embed 1`] = `
<div
  class="embed-tutor small-header"
>
  <header
    class="head"
  />
  <div
    class="main"
  >
    <div
      class="no-url"
    >
      <h2>
        <span>
          Добро пожаловать!
        </span>
      </h2>
    </div>
    <lego-components_modal
      autoclosable="false"
      theme="normal"
      trapfocus="false"
      visible="false"
    >
      <div
        class="wrapper"
      >
        <span
          class="close"
        >
          <ufo-rocks_icon />
        </span>
        <div
          class="content"
        />
      </div>
    </lego-components_modal>
  </div>
</div>
`;
